@@ -1,3 +1,9 @@
+? - ?
+* src/discover.ml :
+  * New option -q to suppress stderr
+  * --disable-* options to exclude selected features from build
+* More precise test for `sendmsg` (bug #1162)
+
 0.0.4 - 19 May 2012
 * ExtUnix now depends on Bigarray and provides variants of 
   some bindings operating on bigarray buffers (BA submodule)
